tests/transpiler/x/hs/string_in_operator.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 17:43:15 GMT+7
s = "catch"

main :: IO ()
main = do
    print ("cat" in s)
    print ("dog" in s)
